--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "ember-data": "1.13.8",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
-    "ember-parse-adapter": "git://github.com/joshfester/ember-parse-adapter.git"
+    "ember-parse-adapter": "git://github.com/maedi/ember-parse-adapter.git",
+    "ember-validations": "2.0.0-alpha.4"
   }
 }
