--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0",
-    "ember-simple-auth": "0.8.0"
+    "ember-simple-auth": "0.8.0",
+    "chartjs": "1.0.2"
   },
   "resolutions": {
     "ember": "2.0.2"
